# ashgrove-welcome

./: .gitignore  Cargo.toml  README.md
crates/forge-welcome-cli/: Cargo.toml
crates/forge-welcome-cli/src/: main.rs
crates/forge-welcome-core/: Cargo.toml
crates/forge-welcome-core/src/: development.rs  error.rs  installer.rs  lib.rs  manifest.rs  models.rs  system.rs
crates/forge-welcome-gui/: Cargo.toml
crates/forge-welcome-gui/src/: main.rs
crates/forge-welcome-gui/ui/: app.slint
crates/forge-welcome-gui/ui/components/: ForgeButton.slint  ForgeScrollArea.slint  HeroDivider.slint  InstallReviewDialog-old.slint  InstallReviewDialog.slint  PackItemCard.slint  Sidebar.slint  SystemUpdateCard.slint  TaskProgressBar.slint
crates/forge-welcome-gui/ui/pages/: DevelopmentPage.slint  HomePage.slint  PlaceholderPage.slint
docs/: Architecture.md  CHANGELOG.md  Current Sprint.md  Decisions.md  Development Journal.md  Learning Review v0.6.0.md  Learning Review v0.6.1.md  Master Knowledge Base.md  Milestone Complete Report v0.6.1.md  Milestones.md  Next Sprint Plan v0.6.1.md  Next Sprint Plan v0.6.2.md  Project Status.md  Roadmap.md
docs/milestones/: milestone_complete_v0.6.1.md
manifests/: developer-pack.yaml  ecosystem-pack.yaml  gaming-pack.yaml  productivity-pack.yaml  sync-pack.yaml
