[workspace]
members = [
    "crates/forge-welcome-core",
    "crates/forge-welcome-cli",
    "crates/forge-welcome-gui",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Daryel Johnson"]
license = "MIT"
repository = "https://github.com/AshGroveLabs/ashgrove-welcome"
